humble_ws/log/build_2024-02-22_15-15-06/waypoint_logger/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/rstole01/Documents/CSE-596/humble_ws/install/waypoint_logger/lib/python3.10/site-packages/waypoint_logger/waypoint_logger.py", line 32
    self.get_logger().info('I heard: "%s"' % msg.data)self.get_logger().info('I heard: "%s"' % msg.data)
                                                      ^^^^
SyntaxError: invalid syntax

